# python-ciku

./: .bumpversion.toml  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
src/ciku/: __init__.py  __main__.py  cli.py
src/ciku/core/: base.py  models.py  utils.py
src/ciku/parser/: __init__.py  baidu.py  huayu.py  qq.py  qq2.py  registry.py  sogou.py
src/ciku/pinyin/: baidu.py  huayu.py  syllable.py
tests/: README.md  test_baidu_parser.py  test_base_parser.py  test_cli.py  test_huayu_parser.py  test_local_data.py  test_parser_registry.py  test_sogou_parser.py  test_utils.py
