[project]
name = "ciku"
version = "0.3.0"
description = "Chinese IME ciku (aka word list / lexicon file) parsing tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.urls]
Homepage = "https://github.com/hantang/python-ciku"
Documentation = "https://github.com/hantang/python-ciku"
Repository = "https://github.com/hantang/python-ciku.git"
Issues = "https://github.com/hantang/python-ciku/issues"
Changelog = "https://github.com/hantang/python-ciku/blob/main/CHANGELOG.md"

[project.scripts]
ciku = "ciku.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
