[project]
name = "ciku"
version = "0.3.2"
description = "Chinese IME ciku (aka word list / lexicon file) parsing tool"
readme = "README.md"
authors = [
    { name = "hantang"}
]
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.urls]
Homepage = "https://github.com/hantang/python-ciku"
Documentation = "https://github.com/hantang/python-ciku"
Repository = "https://github.com/hantang/python-ciku.git"
Issues = "https://github.com/hantang/python-ciku/issues"
Changelog = "https://github.com/hantang/python-ciku/blob/main/CHANGELOG.md"

[project.scripts]
ciku = "ciku.cli:main"

[dependency-groups]
dev = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
